# PixelChat

./: .gitignore  pubspec.yaml
android/app/: build.gradle.kts
client/: pubspec.yaml
client/lib/: main.dart
client/lib/models/: department.dart  user.dart
client/lib/screens/: auth_screen.dart  home_screen.dart
client/lib/services/: auth_service.dart  crypto_service.dart  department_service.dart  secure_storage_service.dart  websocket_service.dart
client/web/: manifest.json
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: app_config.dart
lib/models/: department.dart  department_employee.dart  department_tree.dart  employee.dart  hive_chat_key.dart  hive_chat_key.g.dart  hive_message.dart  hive_message.g.dart  message.dart
lib/screens/: auth_screen.dart  login_screen.dart  splash_screen.dart
lib/services/: api_service.dart  auth_service.dart  chat_keys_service.dart  chat_service.dart  crypto_service.dart  encryption_service.dart  websocket_service.dart
lib/widgets/: connection_indicator.dart  organization_browser.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs
server/src/db/: mod.rs
server/src/handlers/: auth.rs  chat.rs  department.rs  mod.rs  ws.rs
server/src/middleware/: auth.rs  mod.rs
server/src/models/: auth.rs  chat.rs  department.rs  mod.rs
server/src/routes/: auth.rs  chat.rs  department.rs  mod.rs  ws.rs
server/src/utils/: mod.rs
test/: widget_test.dart
windows/runner/: Runner.rc
(+13 files in other folders)
