[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["rustls"] }
bcrypt = "0.15"
dotenv = "0.15"
rustls-pemfile = "2.2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
tokio-tungstenite = "0.21"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
